SVN: merge from release-3-2 to trunk-3-3
git-svn-id: https://svn.javlin.eu/svn/cloveretl.opensource/trunk-3-3@12614 a09ad3ba-1a0f-0410-b1b9-c67202f10d70