@@ -23,7 +23,7 @@ import java.io.UnsupportedEncodingException;
 import java.net.URLConnection;
 import java.net.URLDecoder;
 
-import sun.misc.BASE64Encoder;
+import org.apache.commons.codec.binary.Base64;
 
 /**
  * 
@@ -55,7 +55,7 @@ public class URLConnectionRequest {
 	 * @throws IOException
 	 */
     public static URLConnection getAuthorizedConnection(URLConnection uc, String userInfo, String authorizationType) {
-        // check authorization
+        // check authorization 
         if (userInfo != null) {
         	// FIXME does not work for SOCKS proxies
             uc.setRequestProperty(authorizationType, URL_CONNECTION_BASIC + encode(decodeString(userInfo)));
@@ -68,9 +68,8 @@ public class URLConnectionRequest {
      * @param source
      * @return
      */
-    private static String encode(String source){
-    	BASE64Encoder enc = new sun.misc.BASE64Encoder();
-    	return enc.encode(source.getBytes());
+    static String encode(String source){
+    	return Base64.encodeBase64URLSafeString(source.getBytes());
     }
     
 	/**
@@ -78,7 +77,7 @@ public class URLConnectionRequest {
 	 * @param s
 	 * @return
 	 */
-	private static final String decodeString(String s) {
+	static final String decodeString(String s) {
 		try {
 			return URLDecoder.decode(s, ENCODING);
 		} catch (UnsupportedEncodingException e) {
